[package]
name = "vault-client"
version = "0.1.0"
edition = "2021"
description = "Generated Rust client for the vault program"

[features]
default = []
serde = ["dep:serde"]
solana-sdk = ["dep:solana-sdk"]

[dependencies]
borsh = { workspace = true, features = ["derive"] }
solana-account-info = "2.0"
solana-cpi = "2.0"
solana-instruction = "2.0"
solana-program-error = "2.0"
solana-pubkey = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
solana-sdk = { workspace = true, optional = true }
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "2.0.12"